[package]
name = "rogue-gym-act2gif"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
edition = "2021"
workspace = "../"

[dependencies]
anyhow = "1.0"
failure = "0.1.5"
rusttype = "0.7.5"
tuple-map = "0.4.0"
clap = "2.32.0"
image = "0.22"

[dependencies.rogue-gym-core]
path = "../core/"
version = "0.1.0"

[dependencies.rogue-gym-uilib]
path = "../uilib/"
version = "0.1.0"

[dependencies.rect-iter]
version = "0.3.0"
default-features = false
features = ["image"]
