[package]
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
name = "rogue-gym-core"
version = "0.1.0"

[dependencies]
bitflags = "1.0"
derive_more = "0.11"
enum-iterator = "0.2"
failure = "0.1.2"
fixedbitset = "0.1.9"
log = "0.4.1"
num-traits = "0.2"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tuple-map = "0.4"

[dependencies.termion]
version = "1.5.1"
optional = true

[dependencies.rand]
version = "0.5.0"
features = ["serde1", "i128_support"]

[dependencies.rect-iter]
version = "0.1.9"
default-features = false
features = ["serde"]

[features]
default = []
