[package]
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
name = "rogue-gym-core"
version = "0.1.0"

[dependencies]
bitflags = "1.0"
derive_more = "0.14"
enum-iterator = "0.3"
failure = "0.1.5"
fixedbitset = "0.1.9"
log = "0.4.1"
ndarray = "0.12"
num-traits = "0.2.6"
regex = "1.0"
serde_json = "1.0"
tuple-map = "0.4"

[dependencies.rand]
features = ["serde1", "i128_support"]
version = "0.6"

[dependencies.rand_xorshift]
features = ["serde"]
version = "0.1"

[dependencies.rect-iter]
default-features = false
features = ["ndarray", "serde"]
version = "0.2.3"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.smallvec]
features = ["serde"]
version = "0.6"

[target.'cfg(unix)'.dependencies.termion]
version = "1.5.1"

[features]
default = []
