[package]
name = "rogue-gym-core"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
derive_more = "0.99"
enum-iterator = "0.6"
fixedbitset = "0.2"
log = "0.4"
ndarray = "0.15"
num-traits = "0.2"
regex = "1.3"
serde_json = "1.0"
thiserror = "1.0"
tuple-map = "0.4"

[dependencies.rand]
features = ["serde1"]
version = "0.7"

[dependencies.rand_xorshift]
features = ["serde1"]
version = "0.2"

[dependencies.rect-iter]
default-features = false
features = ["ndarray", "serde"]
version = "0.3.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.smallvec]
features = ["serde"]
version = "1.3"

[target.'cfg(unix)'.dependencies.termion]
version = "1.5"

[features]
default = []
