[package]
name = "rogue-gym-devui"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]

[lib]
name = "rogue_gym_devui"
path = "src/lib.rs"

[[bin]]
name = "rogue_gym_devui"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2.31"
failure = "0.1.2"
fern = "0.5.5"
log = "0.4.1"
termion = "1.5"
tuple-map = "0.4.0"
chrono = "0.4.2"

[dependencies.rogue-gym-core]
features = ["termion"]
path = "../core/"
version = "0.1.0"
