[package]
name = "rogue-gym-devui"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
edition = "2021"

[lib]
name = "rogue_gym_devui"
path = "src/lib.rs"

[[bin]]
name = "rogue_gym_devui"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
clap = "2.33"
fern = "0.6"
log = "0.4"
tuple-map = "0.4"
chrono = "0.4"

[target.'cfg(unix)'.dependencies.termion]
version = "1.5"

[dependencies.rogue-gym-core]
path = "../core/"
version = "0.1.0"

[dependencies.rogue-gym-uilib]
path = "../uilib/"
version = "0.1.0"

