[package]
name = "rogue-gym-python"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]

[lib]
name = "rogue_gym_python"
crate-type = ["cdylib"]

[dependencies]
failure = "0.1.3"
ndarray = "0.12"
numpy = "0.6.0"
rect-iter = "0.2.0"

[dependencies.pyo3]
version = "0.7.0"

[dependencies.rogue-gym-core]
path = "../core/"
version = "0.1.0"

[target.'cfg(unix)'.dependencies.rogue-gym-devui]
path = "../devui/"
version = "0.1.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]