[package]
name = "rogue-gym-python"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
edition = "2021"

[lib]
name = "rogue_gym_python"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
ndarray = "0.15"
numpy = "0.20"

[dependencies.rect-iter]
version = "0.3.0"
default-features = false

[dependencies.pyo3]
version = "0.20"

[dependencies.rogue-gym-core]
path = "../core/"
version = "0.1.0"

[target.'cfg(unix)'.dependencies.rogue-gym-devui]
path = "../devui/"
version = "0.1.0"
