[package]
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
name = "rogue-gym-core"
version = "0.0.1"

[dependencies]
bitflags = "1.0"
derive_more = "0.10"
enum-iterator-derive = "0.1.1"
error-chain-mini = "0.0.3"
error-chain-mini-derive = "0.0.3"
fixedbitset = "0.1.9"
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tuple-map = "0.3"

[dependencies.termion]
version = "1.5.1"
optional = true

[dependencies.rand]
features = ["serde1"]
version = "0.5.0-pre.1"

[dependencies.rect-iter]
default-features = false
features = ["serde", "nightly"]
version = "0.1.8"
