[package]
name = "rogue-gym-devui"
version = "0.0.1"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]

[dependencies]
clap = "2.31"
error-chain-mini = "0.1.1"
error-chain-mini-derive = "0.1.1"
termion = "1.5"

[dependencies.rogue-gym-core]
features = ["termion"]
path = "../rogue-gym-core/"
version = "0.0.1"
